NetBSD Problem Report #26510

Received: (qmail 2098 invoked by uid 605); 2 Aug 2004 06:09:38 -0000
Message-Id: <200408020607.i7267ir28737@marcela.zlz.net>
Date: Mon, 2 Aug 2004 02:07:44 -0400 (EDT)
From: "Darrin B. Jewell" <dbj@netbsd.org>
Sender: gnats-bugs-owner@NetBSD.org
To: gnats-bugs@gnats.netbsd.org
Cc: "Darrin B. Jewell" <dbj@netbsd.org>
Subject: fdisk on blank disk fails if /usr/mdec/mbr nonexistant

>Number:         26510
>Category:       bin
>Synopsis:       fdisk on blank disk fails if /usr/mdec/mbr nonexistant
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    dsl
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 02 06:10:01 +0000 2004
>Closed-Date:    Sat Oct 31 20:42:04 +0000 2009
>Last-Modified:  Sat Oct 31 20:45:01 +0000 2009
>Originator:     Darrin B. Jewell
>Release:        NetBSD 2.0E
>Organization:
>Environment:
>Description:
fdisk on blank disk fails if /usr/mdec/mbr nonexistant

This occurred while trying to partition a disk from a trimmed
memory disk that did not contain /usr/mdec/mbr nor needed
to install boot code.

>How-To-Repeat:

# dd if=/dev/zero of=/dev/rwd1d count=100 bs=64k
100+0 records in
100+0 records out
6553600 bytes transferred in 0.198 secs (33098989 bytes/sec)
# /tmp/fdisk -v -u wd1
fdisk: primarypartition table invalid, no magic in sector 0
fdisk: /usr/mdec/mbr: No such file or directory

>Fix:

Not sure, but code inspection reveals that init_sector0 passes 1 to
the err_exit parameter of read_boot in fdisk.c
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: bin-bug-people->dsl
Responsible-Changed-By: dsl@netbsd.org
Responsible-Changed-When: Sat, 23 Sep 2006 16:40:10 +0000
Responsible-Changed-Why:
I probably changed it last...


State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Sat, 31 Oct 2009 20:42:04 +0000
State-Changed-Why:
Absence of /usr/mdec/mbr made non-fatal


From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/26510 CVS commit: src/sbin/fdisk
Date: Sat, 31 Oct 2009 20:41:00 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Sat Oct 31 20:41:00 UTC 2009

 Modified Files:
 	src/sbin/fdisk: fdisk.c

 Log Message:
 Make absence of /usr/mdec/mbr only a warning.
 Fixes PR/26510


 To generate a diff of this commit:
 cvs rdiff -u -r1.123 -r1.124 src/sbin/fdisk/fdisk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.