Make absence of /usr/mdec/mbr only a warning. Fixes PR/26510